# mocv

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
apps/: CMakeLists.txt
apps/mosaic/: CMakeLists.txt  README.md  main.c
apps/stereo/: CMakeLists.txt  main.c
apps/track_color/: CMakeLists.txt  README.md  main.c
include/: array.h  histogram.h  image.h  image_draw.h  image_op.h  image_stats.h  img.h  kernel.h  list.h  mathx.h  rect.h  tracking.h
include/keypoints/: keypoint.h
src/: array.c  array.h  histogram.c  histogram.h  image.c  image.h  image_draw.c  image_draw.h  image_op.c  image_op.h  image_stats.c  image_stats.h  img.cpp  img.h  kernel.c  kernel.h  keypoint.h  list.c  list.h  lk.c  main.c  mathx.c  mathx.h  matrix.c  matrix.h  panorama.c  panorama.h  rect.c  rect.h  stdx.c  stdx.h  tracking.c  tracking.h
src/keypoints/: harris.c  harris.h  keypoint.c  keypoint.h
src/optical_flow/: lk.c  lk.h
